--- a/src/com/mjwtech/course/view/Course.fxml
+++ b/src/com/mjwtech/course/view/Course.fxml
@@ -7,8 +7,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.course.CourseController">
-    <stylesheets>
-        <URL value="@Course.css"/>
-    </stylesheets>
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.course.controller.CourseController">
+  <stylesheets>
+    <URL value="@Course.css" />
+    <URL value="@../../../../resources/css/base.css" />
+  </stylesheets>
 </AnchorPane>
