--- a/src/com/mjwtech/employee/view/Employee.fxml
+++ b/src/com/mjwtech/employee/view/Employee.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.employee.EmployeeController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.employee.controller.EmployeeController">
     <stylesheets>
         <URL value="@Employee.css"/>
     </stylesheets>
