Finalized add new customer form with on the fly validation.
Added the add new emergency contact page and set controller

Added the view customer page. Only functionality right now is search and edit customer.

--- a/src/com/mjwtech/customer/view/AddNewCustomer.fxml
+++ b/src/com/mjwtech/customer/view/AddNewCustomer.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.*?>
 <?import jfxtras.labs.scene.control.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="748.0" styleClass="root" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.customer.controller.AddNewCustomerController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="600.0" prefWidth="748.0" styleClass="root" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.customer.controller.AddNewCustomerController">
   <children>
     <TextField id="textField1" fx:id="txtFirstName" layoutX="187.0" layoutY="118.0" prefWidth="154.0" />
     <TextField id="textField1" fx:id="txtLastName" layoutX="82.0" layoutY="176.0" prefWidth="154.0" />
@@ -20,7 +20,7 @@
     <TextField id="textField1" fx:id="txtCity" layoutX="82.0" layoutY="411.0" prefWidth="125.0" />
     <ComboBox id="comboBox1" fx:id="cmbState" layoutX="229.0" layoutY="350.0" prefHeight="23.0" prefWidth="112.0" promptText="State" />
     <TextField id="textField1" fx:id="txtZip" layoutX="229.0" layoutY="411.0" prefWidth="82.0" />
-    <Label id="label1" layoutX="81.0" text="NEW CUSTOMER INFORMATION" textAlignment="CENTER" />
+    <Label id="title" layoutX="81.0" layoutY="28.0" styleClass="title" text="ADD NEW CUSTOMER" textAlignment="CENTER" />
     <Label id="label2" layoutX="406.0" layoutY="99.0" text="Home Phone" />
     <Label id="label2" layoutX="406.0" layoutY="157.0" text="Cell Phone" />
     <Label id="label2" layoutX="405.0" layoutY="215.0" text="Email" />
@@ -40,7 +40,7 @@
     <TextField id="textField1" fx:id="txtCellPhone3" layoutX="508.0" layoutY="176.0" prefWidth="54.0" />
     <TextField id="textField1" fx:id="txtEmail" layoutX="405.0" layoutY="234.0" prefWidth="259.0" />
     <Button fx:id="btnSubmit" layoutX="405.0" layoutY="409.0" minHeight="26.999900000002526" mnemonicParsing="false" prefHeight="26.999900000002526" prefWidth="259.0" styleClass="submit-button" text="Add Customer To System" />
-    <CalendarTextField id="textField2" fx:id="calendar" layoutX="406.0" layoutY="292.0" prefWidth="126.0" />
+    <CalendarTextField id="textField2" fx:id="calendar" layoutX="406.0" layoutY="292.0" maxWidth="101.0" prefWidth="101.0" style="&#10;" />
     <ComboBox id="comboBox1" fx:id="cmbCountry" layoutX="81.0" layoutY="350.0" prefHeight="23.0" prefWidth="112.0" promptText="Country" />
     <Label id="label2" layoutX="81.0" layoutY="331.0" text="Country" />
     <Label id="label2" layoutX="262.0" layoutY="157.0" text="Suffix" />
@@ -73,6 +73,7 @@
       </items>
     </ComboBox>
     <Label id="label2" layoutX="407.0" layoutY="331.0" text="Highschool" />
+    <TextField fx:id="calendar_mask" editable="true" focusTraversable="false" layoutX="404.0" layoutY="292.0" prefWidth="103.0" />
   </children>
   <stylesheets>
     <URL value="@../../../../resources/css/base.css" />
