--- a/src/com/mjwtech/Main.fxml
+++ b/src/com/mjwtech/Main.fxml
@@ -52,6 +52,12 @@
       </effect>
     </Button>
     <Button fx:id="btnLogOut" layoutX="899.0" layoutY="8.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnLogOut_sc" />
+    <AnchorPane fx:id="effectsPane" blendMode="OVERLAY" layoutX="8.0" layoutY="64.0" mouseTransparent="true" prefHeight="651.0" prefWidth="1244.0" visible="false">
+      <children>
+        <Label alignment="CENTER" layoutX="529.0" layoutY="308.0" prefHeight="35.0" prefWidth="187.0" style="-fx-text-fill:red;&#10;-fx-font-size:30;&#10;-fx-font-family:Perpetua&#10;" text="PROCESSING" textAlignment="CENTER" visible="true" />
+        <ProgressIndicator layoutX="458.0" layoutY="195.0" prefHeight="262.0" prefWidth="328.0" progress="-1.0" />
+      </children>
+    </AnchorPane>
   </children>
   <stylesheets>
     <URL value="@../../resources/css/base.css" />
