--- a/src/com/mjwtech/main/view/Main.fxml
+++ b/src/com/mjwtech/main/view/Main.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" styleClass="root" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.MainController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" styleClass="root" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.main.controller.MainController">
   <children>
     <TilePane fx:id="contentPane" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefColumns="1" prefHeight="651.0" prefRows="1" prefWidth="1244.0" styleClass="contentPane, background3" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="64.0">
       <effect>
@@ -29,8 +29,8 @@
         <Button fx:id="btnBalanceDue" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnBalanceDue_sc" />
       </children>
     </HBox>
-    <Label fx:id="lblUserName" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutY="18.0" prefHeight="37.0" prefWidth="291.0" style="" text="" textAlignment="LEFT" textFill="WHITE" AnchorPane.rightAnchor="10.0" />
-    <Label fx:id="lblToolTip" alignment="CENTER" layoutX="14.0" layoutY="50.0" prefWidth="627.0" text="" visible="false" />
+    <Label fx:id="lblUserName" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutY="18.0" prefHeight="37.0" prefWidth="291.0" textFill="WHITE" AnchorPane.rightAnchor="10.0" />
+    <Label fx:id="lblToolTip" alignment="CENTER" layoutX="14.0" layoutY="50.0" prefWidth="627.0" visible="false" />
     <HBox fx:id="toggleButtonContainer" alignment="CENTER" layoutX="8.0" layoutY="9.0" prefHeight="48.0" prefWidth="506.0" spacing="15.0" styleClass="undecorator-background, toggleButtonContainer">
       <children>
         <ToggleButton fx:id="btnCustomer" maxWidth="130.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="115.0" text="Customer">
@@ -46,26 +46,26 @@
         <ToggleButton fx:id="btnVehicle" effect="$x1" maxWidth="130.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="115.0" text="Vehicle" toggleGroup="$NavButton" />
       </children>
     </HBox>
-    <Button id="close" fx:id="btnMenu" blendMode="SRC_ATOP" mnemonicParsing="false" opacity="1.0" prefHeight="25.0" prefWidth="25.0" styleClass="decoration-button-menu" text="" visible="true" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="2.0">
+    <Button id="close" fx:id="btnMenu" blendMode="SRC_ATOP" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" styleClass="decoration-button-menu" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="2.0">
       <effect>
         <ColorAdjust brightness="-0.4126984126984127" contrast="0.41269841269841256" hue="0.04761904761904767" saturation="-0.2222222222222222" />
       </effect>
     </Button>
     <Button fx:id="btnLogOut" layoutX="899.0" layoutY="8.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnLogOut_sc" />
-    <Group id="Group" fx:id="ProgressGroup" layoutX="518.0" layoutY="232.0" opacity="1.0">
+    <Group id="Group" fx:id="ProgressGroup" layoutX="518.0" layoutY="232.0" opacity="0.0">
       <children>
-        <ProgressIndicator id="ProgressIndicator" layoutX="0.0" layoutY="0.0" prefHeight="131.0" prefWidth="163.0" progress="-1.0" style="-fx-progress-color:lightblue">
+        <ProgressIndicator id="ProgressIndicator" prefHeight="131.0" prefWidth="163.0" style="-fx-progress-color:lightblue">
           <effect>
             <GaussianBlur radius="41.07432432432433" />
           </effect>
         </ProgressIndicator>
-        <Label fx:id="lblProgressStatus" alignment="CENTER" layoutX="-10.0" layoutY="156.0" prefHeight="35.0" prefWidth="187.0" style="-fx-text-fill:white;&#10;-fx-font-size:24;&#10;-fx-font-family:Verdana&#10;" text="PROCESSING" textAlignment="CENTER" visible="true" />
+        <Label fx:id="lblProgressStatus" alignment="CENTER" layoutX="-10.0" layoutY="156.0" prefHeight="35.0" prefWidth="187.0" style="-fx-text-fill:white;&#10;-fx-font-size:24;&#10;-fx-font-family:Verdana&#10;" text="PROCESSING" textAlignment="CENTER" />
       </children>
     </Group>
   </children>
   <stylesheets>
-    <URL value="@../../resources/css/base.css" />
-    <URL value="@../../resources/css/undecorator.css" />
     <URL value="@Main.css" />
+    <URL value="@../../../../resources/css/base.css" />
+    <URL value="@../../../../resources/css/undecorator.css" />
   </stylesheets>
 </AnchorPane>
