--- a/src/com/mjwtech/customer/view/ViewCustomer.fxml
+++ b/src/com/mjwtech/customer/view/ViewCustomer.fxml
@@ -17,11 +17,11 @@
       <children>
         <TextField fx:id="txtCustomerID" editable="false" focusTraversable="false" layoutX="-1.0" layoutY="23.0" prefWidth="95.0" />
         <TextField fx:id="txtSalutation" editable="false" focusTraversable="false" layoutX="-1.0" layoutY="82.0" prefWidth="56.0" />
-        <ComboBox fx:id="cmbSalutation" focusTraversable="true" layoutX="-1.0" layoutY="82.0" prefHeight="23.0" prefWidth="68.0" visible="true" />
+        <ComboBox fx:id="cmbSalutation" layoutX="-1.0" layoutY="82.0" prefHeight="23.0" prefWidth="68.0" />
         <TextField fx:id="txtFirstName" editable="false" layoutX="-1.0" layoutY="140.0" prefWidth="288.0" />
         <TextField fx:id="txtLastName" editable="false" layoutX="-1.0" layoutY="196.0" prefWidth="288.0" />
         <TextField id="txtLastName" fx:id="txtSuffix" editable="false" focusTraversable="false" layoutX="294.0" layoutY="196.0" prefWidth="95.00009999999747" />
-        <ComboBox fx:id="cmbSuffix" layoutX="294.0" layoutY="195.0" prefHeight="23.0" prefWidth="98.0" visible="true" />
+        <ComboBox fx:id="cmbSuffix" layoutX="294.0" layoutY="195.0" prefHeight="23.0" prefWidth="98.0" />
         <TextField fx:id="txtAddress" editable="false" layoutX="-2.0" layoutY="254.0" prefWidth="392.0" />
         <TextField fx:id="txtAddress2" editable="false" layoutX="-1.0" layoutY="318.0" prefWidth="391.0" />
         <TextField fx:id="txtCity" editable="false" layoutX="-2.0" layoutY="381.0" prefWidth="125.0" />
@@ -61,8 +61,8 @@
         <Label id="label2" layoutX="295.0" layoutY="178.0" text="Suffix" />
         <TableView fx:id="tableNote" layoutX="468.0" layoutY="316.0" prefHeight="153.0" prefWidth="329.0">
           <columns>
-            <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="82.0" resizable="false" text="Date" fx:id="colNoteDate" />
-            <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="244.0" resizable="false" sortable="false" text="Description" fx:id="colNoteDescription" />
+            <TableColumn editable="false" prefWidth="82.0" resizable="false" text="Date" fx:id="colNoteDate" />
+            <TableColumn editable="false" prefWidth="244.0" resizable="false" sortable="false" text="Description" fx:id="colNoteDescription" />
           </columns>
         </TableView>
         <Button id="button2" fx:id="btnMakePayment" layoutX="586.0" layoutY="256.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnMakePayment" />
@@ -73,8 +73,8 @@
             <TableColumn editable="false" id="tableColumn1" prefWidth="100.0" text="Start Date" fx:id="colStartDate" />
             <TableColumn editable="false" id="tableColumn1" prefWidth="100.0" text="End Date" fx:id="colEndDate" />
             <TableColumn editable="false" id="tableColumn1" prefWidth="125.0" text="Meeting Days" fx:id="colDays" />
-            <TableColumn editable="false" id="tableColumn1" maxWidth="5000.0" minWidth="10.0" prefWidth="172.0" text="Time" fx:id="colTime" />
-            <TableColumn editable="false" id="tableColumn1" maxWidth="5000.0" minWidth="10.0" prefWidth="135.0" text="Instructor" fx:id="colInstructor" />
+            <TableColumn editable="false" id="tableColumn1" prefWidth="172.0" text="Time" fx:id="colTime" />
+            <TableColumn editable="false" id="tableColumn1" prefWidth="135.0" text="Instructor" fx:id="colInstructor" />
           </columns>
         </TableView>
       </children>
@@ -93,12 +93,16 @@
           </items>
         </ChoiceBox>
         <Button fx:id="btnSearch" alignment="CENTER" contentDisplay="CENTER" layoutX="126.0" layoutY="52.0" maxHeight="23.0" maxWidth="23.0" minHeight="23.0" minWidth="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnSearch" />
-        <Button fx:id="btnSaveChanges" alignment="CENTER" contentDisplay="CENTER" layoutX="51.0" layoutY="85.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnAcceptChanges" />
-        <Button fx:id="btnCancelChanges" layoutX="1.0" layoutY="85.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnCancelChanges" />
-        <Button fx:id="btnEditCustomer" alignment="CENTER" layoutX="1.0" layoutY="85.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnEditCustomer" />
-        <Button fx:id="btnRemoveCustomer" alignment="CENTER" layoutX="101.0" layoutY="85.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnDeleteCustomer" />
-        <Button fx:id="btnEnrollCourse" alignment="CENTER" layoutX="101.0" layoutY="85.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnAddToCourse" />
-        <Button fx:id="btnEmergencyContact" alignment="CENTER" layoutX="51.0" layoutY="85.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnEmergencyContact" textFill="#292929" />
+        <AnchorPane id="AnchorPane" fx:id="buttonWrapper" layoutX="1.0" layoutY="85.0" prefHeight="49.0">
+          <children>
+            <Button fx:id="btnSaveChanges" alignment="CENTER" contentDisplay="CENTER" layoutX="50.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnAcceptChanges" />
+            <Button fx:id="btnCancelChanges" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnCancelChanges" />
+            <Button fx:id="btnEditCustomer" alignment="CENTER" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnEditCustomer" />
+            <Button fx:id="btnRemoveCustomer" alignment="CENTER" layoutX="100.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnDeleteCustomer" />
+            <Button fx:id="btnEnrollCourse" alignment="CENTER" layoutX="100.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnAddToCourse" />
+            <Button fx:id="btnEmergencyContact" alignment="CENTER" layoutX="50.0" maxHeight="48.0" maxWidth="48.0" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="btnEmergencyContact" textFill="#292929" />
+          </children>
+        </AnchorPane>
         <Label fx:id="lblToolTip" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="1.0" layoutY="138.0" prefHeight="23.0" prefWidth="147.0" styleClass="labelToolTip" textAlignment="CENTER" textFill="#5d5d5d" wrapText="true" />
       </children>
     </AnchorPane>
