--- a/src/com/mjwtech/customer/view/ViewCustomer.fxml
+++ b/src/com/mjwtech/customer/view/ViewCustomer.fxml
@@ -60,7 +60,11 @@
         <Label id="label2" layoutX="171.0" layoutY="216.0" text="Suffix" />
         <Button id="button2" fx:id="btnMakePayment" layoutX="617.0" layoutY="404.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnMakePayment" />
         <Label id="label3" layoutX="7.0" layoutY="92.0" prefWidth="22.0" text="ID" />
-        <Label id="title" layoutX="5.0" layoutY="10.0" minHeight="30.0" mouseTransparent="true" prefHeight="38.0" styleClass="title" text="CUSTOMER RECORD" textAlignment="CENTER" />
+        <AnchorPane id="AnchorPane" layoutX="5.0" layoutY="10.0" prefWidth="363.0">
+          <children>
+            <Label id="title" minHeight="30.0" mouseTransparent="true" prefHeight="38.0" styleClass="title" text="CUSTOMER RECORD" textAlignment="CENTER" />
+          </children>
+        </AnchorPane>
       </children>
     </AnchorPane>
     <TilePane fx:id="advancedView" alignment="CENTER" maxHeight="-Infinity" maxWidth="1220.0" minHeight="-Infinity" minWidth="0.0" opacity="0.0" orientation="VERTICAL" prefHeight="645.0" prefWidth="1220.0" style="-fx-background-color: rgba(0,0,0,.46);" />
