--- a/src/com/mjwtech/customer/view/ViewCustomer.fxml
+++ b/src/com/mjwtech/customer/view/ViewCustomer.fxml
@@ -12,63 +12,63 @@
 <?import javafx.scene.text.*?>
 <?import jfxtras.labs.scene.control.*?>
 
-<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="1220.0" styleClass="root, background3" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.customer.controller.ViewCustomerController">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="1205.0" styleClass="root, background3" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mjwtech.customer.controller.ViewCustomerController">
   <children>
     <AnchorPane id="AnchorPane" fx:id="form" layoutX="289.0" layoutY="17.0" minWidth="396.0" prefHeight="576.0" prefWidth="899.0">
       <children>
-        <TextField fx:id="txtCustomerID" editable="false" focusTraversable="false" layoutX="8.0" layoutY="110.0" prefWidth="95.0" />
-        <TextField fx:id="txtSalutation" editable="false" focusTraversable="false" layoutX="8.0" layoutY="177.0" prefWidth="56.0" />
-        <ComboBox fx:id="cmbSalutation" layoutX="9.0" layoutY="177.0" prefHeight="23.0" prefWidth="68.0" />
-        <TextField fx:id="txtFirstName" editable="false" layoutX="105.0" layoutY="177.0" prefWidth="122.0" />
-        <TextField fx:id="txtLastName" editable="false" layoutX="9.0" layoutY="234.0" prefWidth="149.0" />
-        <TextField id="txtLastName" fx:id="txtSuffix" editable="false" focusTraversable="false" layoutX="170.0" layoutY="234.0" prefWidth="56.0" />
-        <ComboBox fx:id="cmbSuffix" layoutX="170.0" layoutY="233.0" prefHeight="23.0" prefWidth="56.0" />
-        <TextField fx:id="txtAddress" editable="false" layoutX="9.0" layoutY="292.0" prefWidth="392.0" />
-        <TextField fx:id="txtAddress2" editable="false" layoutX="8.0" layoutY="349.0" prefWidth="180.0" />
-        <TextField fx:id="txtCity" editable="false" layoutX="8.0" layoutY="403.0" prefWidth="125.0" />
-        <TextField fx:id="txtState" editable="false" layoutX="145.0" layoutY="402.0" prefWidth="107.0" />
-        <ComboBox id="comboBox1" fx:id="cmbState" layoutX="144.0" layoutY="402.0" prefHeight="22.0" prefWidth="112.0" promptText="State" />
-        <CalendarTextField fx:id="txtDOB" layoutX="498.0" layoutY="349.0" prefWidth="140.0" />
-        <TextField fx:id="txtDOB_mask" editable="false" layoutX="498.0" layoutY="349.0" prefWidth="122.0" />
-        <TextField fx:id="txtZip" editable="false" layoutX="270.0" layoutY="402.0" prefWidth="82.0" />
-        <TextField id="textField1" fx:id="txtCountry" focusTraversable="false" layoutX="7.0" layoutY="460.0" prefWidth="180.0" text="USA" />
-        <ComboBox id="comboBox1" fx:id="cmbCountry" layoutX="7.0" layoutY="459.0" prefHeight="24.0" prefWidth="180.0" promptText="Country" />
-        <TextField fx:id="txtHomePhone1" editable="false" layoutX="500.0" layoutY="174.0" prefWidth="41.0" />
-        <TextField fx:id="txtHomePhone2" editable="false" layoutX="551.0" layoutY="174.0" prefWidth="41.0" />
-        <TextField fx:id="txtHomePhone3" editable="false" layoutX="601.0" layoutY="174.0" prefWidth="48.0" />
-        <TextField fx:id="txtCellPhone1" editable="false" layoutX="500.0" layoutY="232.0" prefWidth="41.0" />
-        <TextField fx:id="txtCellPhone2" editable="false" layoutX="550.0" layoutY="232.0" prefWidth="41.0" />
-        <TextField fx:id="txtCellPhone3" editable="false" layoutX="601.0" layoutY="232.0" prefWidth="48.0" />
-        <TextField fx:id="txtEmail" editable="false" layoutX="498.0" layoutY="292.0" prefWidth="392.0" />
-        <TextField fx:id="txtBalanceDue" alignment="CENTER_RIGHT" editable="false" layoutX="500.0" layoutY="403.0" prefWidth="107.0" />
-        <Button id="button1" fx:id="btnTransactions" layoutX="682.0" layoutY="404.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnHelp" />
-        <Button id="button2" fx:id="btnFee" layoutX="650.0" layoutY="404.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnFee" />
-        <Label id="label2" layoutX="500.0" layoutY="158.0" text="Home Phone" />
-        <Label id="label2" layoutX="500.0" layoutY="216.0" text="Cell Phone" />
-        <Label id="label2" layoutX="498.0" layoutY="275.0" text="Email" />
-        <Label id="label2" layoutX="499.0" layoutY="330.0" text="Date Of Birth" />
-        <Label id="label2" layoutX="105.0" layoutY="161.0" text="First Name" />
-        <Label id="label2" layoutX="9.0" layoutY="212.0" text="Last Name" />
-        <Label id="label2" layoutX="10.0" layoutY="272.0" text="Address" />
-        <Label id="label2" layoutX="8.0" layoutY="328.0" text="Address 2" />
-        <Label id="label2" layoutX="8.0" layoutY="387.0" text="City" />
-        <Label id="label2" layoutX="270.0" layoutY="386.0" text="Zip" />
-        <Label id="label2" layoutX="501.0" layoutY="386.0" text="Balance Due" />
-        <Label id="label2" layoutX="7.0" layoutY="442.0" text="Country" />
-        <Label id="label2" layoutX="145.0" layoutY="387.0" text="State" />
-        <Label id="label2" layoutX="8.0" layoutY="161.0" text="Salutation" />
-        <Label id="label2" layoutX="171.0" layoutY="216.0" text="Suffix" />
-        <Button id="button2" fx:id="btnMakePayment" layoutX="617.0" layoutY="404.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnMakePayment" />
-        <Label id="label3" layoutX="7.0" layoutY="92.0" prefWidth="22.0" text="ID" />
-        <AnchorPane id="AnchorPane" layoutX="5.0" layoutY="10.0" prefWidth="363.0">
+        <TextField fx:id="txtCustomerID" editable="false" focusTraversable="false" layoutX="6.0" layoutY="87.0" prefWidth="95.0" />
+        <TextField fx:id="txtSalutation" editable="false" focusTraversable="false" layoutX="8.0" layoutY="138.0" prefWidth="56.0" />
+        <ComboBox fx:id="cmbSalutation" layoutX="9.0" layoutY="138.0" prefHeight="23.0" prefWidth="68.0" />
+        <TextField fx:id="txtFirstName" editable="false" layoutX="105.0" layoutY="138.0" prefWidth="122.0" />
+        <TextField fx:id="txtLastName" editable="false" layoutX="9.0" layoutY="195.0" prefWidth="149.0" />
+        <TextField id="txtLastName" fx:id="txtSuffix" editable="false" focusTraversable="false" layoutX="170.0" layoutY="195.0" prefWidth="56.0" />
+        <ComboBox fx:id="cmbSuffix" layoutX="170.0" layoutY="194.0" prefHeight="23.0" prefWidth="56.0" />
+        <TextField fx:id="txtAddress" editable="false" layoutX="9.0" layoutY="253.0" prefWidth="392.0" />
+        <TextField fx:id="txtAddress2" editable="false" layoutX="8.0" layoutY="310.0" prefWidth="180.0" />
+        <TextField fx:id="txtCity" editable="false" layoutX="8.0" layoutY="364.0" prefWidth="125.0" />
+        <TextField fx:id="txtState" editable="false" layoutX="145.0" layoutY="363.0" prefWidth="107.0" />
+        <ComboBox id="comboBox1" fx:id="cmbState" layoutX="144.0" layoutY="363.0" prefHeight="22.0" prefWidth="112.0" promptText="State" />
+        <CalendarTextField fx:id="txtDOB" layoutX="498.0" layoutY="310.0" prefWidth="140.0" />
+        <TextField fx:id="txtDOB_mask" editable="false" layoutX="498.0" layoutY="310.0" prefWidth="122.0" />
+        <TextField fx:id="txtZip" editable="false" layoutX="270.0" layoutY="363.0" prefWidth="82.0" />
+        <TextField id="textField1" fx:id="txtCountry" focusTraversable="false" layoutX="7.0" layoutY="421.0" prefWidth="180.0" text="USA" />
+        <ComboBox id="comboBox1" fx:id="cmbCountry" layoutX="7.0" layoutY="420.0" prefHeight="24.0" prefWidth="180.0" promptText="Country" />
+        <TextField fx:id="txtHomePhone1" editable="false" layoutX="500.0" layoutY="135.0" prefWidth="41.0" />
+        <TextField fx:id="txtHomePhone2" editable="false" layoutX="551.0" layoutY="135.0" prefWidth="41.0" />
+        <TextField fx:id="txtHomePhone3" editable="false" layoutX="601.0" layoutY="135.0" prefWidth="48.0" />
+        <TextField fx:id="txtCellPhone1" editable="false" layoutX="500.0" layoutY="193.0" prefWidth="41.0" />
+        <TextField fx:id="txtCellPhone2" editable="false" layoutX="550.0" layoutY="193.0" prefWidth="41.0" />
+        <TextField fx:id="txtCellPhone3" editable="false" layoutX="601.0" layoutY="193.0" prefWidth="48.0" />
+        <TextField fx:id="txtEmail" editable="false" layoutX="498.0" layoutY="253.0" prefWidth="392.0" />
+        <TextField fx:id="txtBalanceDue" alignment="CENTER_RIGHT" editable="false" layoutX="500.0" layoutY="364.0" prefWidth="107.0" />
+        <Button id="button1" fx:id="btnTransactions" layoutX="682.0" layoutY="365.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnHelp" />
+        <Button id="button2" fx:id="btnFee" layoutX="650.0" layoutY="365.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnFee" />
+        <Label id="label2" layoutX="500.0" layoutY="119.0" text="Home Phone" />
+        <Label id="label2" layoutX="500.0" layoutY="177.0" text="Cell Phone" />
+        <Label id="label2" layoutX="498.0" layoutY="236.0" text="Email" />
+        <Label id="label2" layoutX="499.0" layoutY="291.0" text="Date Of Birth" />
+        <Label id="label2" layoutX="105.0" layoutY="122.0" text="First Name" />
+        <Label id="label2" layoutX="9.0" layoutY="173.0" text="Last Name" />
+        <Label id="label2" layoutX="10.0" layoutY="233.0" text="Address" />
+        <Label id="label2" layoutX="8.0" layoutY="289.0" text="Address 2" />
+        <Label id="label2" layoutX="8.0" layoutY="348.0" text="City" />
+        <Label id="label2" layoutX="270.0" layoutY="347.0" text="Zip" />
+        <Label id="label2" layoutX="501.0" layoutY="347.0" text="Balance Due" />
+        <Label id="label2" layoutX="7.0" layoutY="403.0" text="Country" />
+        <Label id="label2" layoutX="145.0" layoutY="348.0" text="State" />
+        <Label id="label2" layoutX="8.0" layoutY="122.0" text="Salutation" />
+        <Label id="label2" layoutX="171.0" layoutY="177.0" text="Suffix" />
+        <Button id="button2" fx:id="btnMakePayment" layoutX="617.0" layoutY="365.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="23.0" styleClass="btnMakePayment" />
+        <Label id="label3" layoutX="5.0" layoutY="69.0" prefWidth="22.0" text="ID" />
+        <AnchorPane id="AnchorPane" layoutX="133.0" layoutY="7.0" prefWidth="363.0">
           <children>
             <Label id="title" minHeight="30.0" mouseTransparent="true" prefHeight="38.0" styleClass="title" text="CUSTOMER RECORD" textAlignment="CENTER" />
           </children>
         </AnchorPane>
       </children>
     </AnchorPane>
-    <TilePane fx:id="advancedView" alignment="CENTER" maxHeight="-Infinity" maxWidth="1220.0" minHeight="-Infinity" minWidth="0.0" opacity="0.0" orientation="VERTICAL" prefHeight="645.0" prefWidth="1220.0" style="-fx-background-color: rgba(0,0,0,.46);" />
-    <AnchorPane id="AnchorPane" layoutX="28.0" layoutY="19.0">
+    <TilePane fx:id="advancedView" alignment="CENTER" maxHeight="-Infinity" maxWidth="1220.0" minHeight="-Infinity" minWidth="0.0" mouseTransparent="true" opacity="0.0" orientation="VERTICAL" prefHeight="645.0" prefWidth="1205.0" style="-fx-background-color: rgba(0,0,0,.46);" />
+    <AnchorPane id="AnchorPane" layoutX="28.0" layoutY="81.0" prefHeight="451.0">
       <children>
         <AnchorPane id="AnchorPane" fx:id="searchWrapper" layoutX="1.0" minHeight="46.0001220703125" minWidth="147.0" prefHeight="172.0" prefWidth="149.0">
           <children>
@@ -105,8 +105,8 @@
           </columns>
         </TableView>
         <Button id="button2" fx:id="btnAddNote" layoutX="1.0" layoutY="283.0" minHeight="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="107.0" text="Add New Note" />
-        <Label id="label2" layoutX="1.0" layoutY="326.0" text="Enrolled Courses" />
-        <TableView id="tableView11" fx:id="tableClass" layoutY="347.0" prefHeight="95.0" prefWidth="205.0">
+        <Label id="label2" layoutX="1.0" layoutY="334.0" text="Enrolled Courses" />
+        <TableView id="tableView11" fx:id="tableClass" layoutY="355.0" prefHeight="95.0" prefWidth="205.0">
           <columns>
             <TableColumn editable="false" id="tableColumn1" prefWidth="203.0" text="Course Name" fx:id="colCourses" />
             <TableColumn editable="false" id="tableColumn1" prefWidth="100.0" text="Start Date" visible="false" fx:id="colStartDate" />
